# SeqLP

./: .gitignore  NONAME_21236088.out  README.md  Untitled-1.ipynb  clustered_report.csv  consensus.json  entropy.json  final_data.npy  labels.txt  modules_server.sh  multiple_alignment.fasta  nanobody_sequences.fasta  pyproject.toml  train_NLP.sh  train_test.sh
jupyter_scripts/: aligned_sequences.fasta  attention_analysis.ipynb  bertology_viz.ipynb  max_instruction.ipynb  nanobody_sequences.fasta  prepare_nanobody_data.ipynb  prepare_train_data.py  validate.ipynb
src/seqlp/: __main__.py  launch.py  test_launch.py  train_model.py  use_model.py
src/seqlp/config/: default_config_model.json  default_config_train.json  model_config.py  train_config.py
src/seqlp/input/: read_pdb.py
src/seqlp/output/: create_output.py  read_gz_file_proof.py
src/seqlp/setup/: data_prep.py  masking.py  read_fasta.py  setup_model.py  tims_mega_alignment.py  tokenizer.py  train_model.py
src/seqlp/visualize/: analyze_random_heavy_chains.py  bertology.py  comparative_analysis.py  dense_network.py  load_model.py  msa_cluster.py  nanobody_sequences.fasta  setup_model.py  supervised_ml.py  tidy_protbert_embedding.py  unsupervised_ml.py
tests/test_data/: aligned_sequences.fasta
tests/test_data/nanobody_model/: config.json
tests/visualize/: test_bertology.py  test_comparative_analysis.py  test_load_model.py  test_msa_cluster.py  test_setup_model.py
