[project]
name = "SeqLP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nils Hofmann", email = "nilhof01@gmail.com"},
    {name = "nilshof01", email = "n.hofmann.99@web.de"},
]
dependencies = [
    "torch>=2.2.2",
    "transformers>=4.39.3",
    "pandas>=2.2.1",
    "requests>=2.31.0",
    "scikit-learn>=1.4.1.post1",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
